Address review comments

--- a/style.css
+++ b/style.css
@@ -3,11 +3,10 @@
 }
 body {
   margin: 0;
-  border: 1rem;
 }
 html {
   background-color: rgb(244, 244, 244);
-  font-family: "Quicksand", san-serif;
+  font-family: "Quicksand";
   font-size: 16px;
   color: rgb(150, 150, 150);
   --background-color-article: rgb(255, 255, 255);
@@ -32,13 +31,12 @@ h2 {
 
 .shoes {
   border-radius: 1.5rem;
-  box-shadow: inset;
-  display: flex;
   flex-direction: column;
   position: relative;
   max-width: 25rem;
-  max-height: 100rem;
+  min-width: 10rem;
   overflow: hidden;
+  box-shadow: inset;
 }
 
 article {
@@ -87,18 +85,18 @@ header::before {
 /** text styling **/
 
 .text-shoes {
-  display: inline;
   padding: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.2rem;
   line-height: 1.5rem;
   font-weight: 400;
-  font-size: 0.75rem;
+  font-size: 0.9rem;
 }
 
 /**+ Menu-Card Styling ***/
 
 .menu-shoes {
   margin: 1rem;
-  margin-top: -0.6rem;
   background-color: var(--background-color-menu);
   border-radius: 0.8rem;
   padding: 1rem;
@@ -126,6 +124,7 @@ select {
   font-size: 0.75rem;
   margin: 0.7rem;
   box-shadow: inset;
+  cursor: pointer;
 }
 .size-and-quantity {
   display: flex;
@@ -144,6 +143,8 @@ input[type="radio"] {
   height: 1.5rem;
   border-radius: 1rem;
   box-shadow: inset;
+  margin: 0.3rem;
+  cursor: pointer;
 }
 
 /* first article */
@@ -182,17 +183,15 @@ input[type="radio"] {
 }
 
 input[type="radio"]:checked {
-  border: 1.5px solid grey;
+  border: 2px solid yellowgreen;
 }
 
 form.color-selector {
   display: flex;
   align-items: center;
-  left: 0.5rem;
-  bottom: 2rem;
 }
 
-form.color-selector div {
+form.color-selector .color-label {
   margin-right: 1rem;
 }
 
@@ -210,4 +209,9 @@ form.color-selector div {
   color: var(--background-color-menu);
   display: block;
   width: 100%;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: rgb(218, 72, 65);
 }
